<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Académico</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello academico</string>
    <string name="Tuser">User</string>
    <string name="Tpass">Pass</string>
    <string name="Bir">Ir</string>
    <string name="Huser">Usuario</string>
    <string name="Hpass">Contraseña</string>
    <string name="Tmat">Matrícula:</string>
    <string name="Tbool">"-- --"</string>
    <string name="Tmatricula">Matrícula: </string>
    <string name="Tedula">Cédula: </string>
    <string name="Testado">Estado: </string>
    <string name="Tnombre">Nombre: </string>
    <string name="tfactor">Factor P: </string>
    <string name="Tdireccion">Dirección: </string>
    <string name="Ttelefono">Telefono: </string>
    <string name="Temail">"eMail: </string>
    <string name="Tcarrera">Carrera: </string>
    <string name="Tpromedio">Promedio: </string>
    <string name="Tmateriastomadas">"Materias tomadas: "</string>
    <string name="acercade">Esta app fue hecha a propósito de la materia de Ingeniería de Software II, dictada por el Ph.D. Carlos Monsalve profesor de la FIEC - ESPOL\n \n \n febrero del 2014</string>
    <string name="desarrolladores">Juan Mite \n/juanriosaki\n\n Danny Ponce \n\n César Madrid \n\n Mariuxi Salazar</string>
    <string name="Mdes">Desarrolladores</string>
    <string name="Mace">Acerca de</string>
    <string name="title_activity_desarrolladores">Desarrolladores</string>
    <string name="title_activity_acerca_de">Acerca de</string>
    <string name="title_activity_menu_principal">Menu Principal</string>
    <string name="title_activity_profesores">Profesores</string>
    <string name="title_activity_deudas">Deudas</string>
    <string name="title_activity_malla">Malla</string>
    <string name="btnHistorial">Historial</string>
    <string name="btnSaldoAFavor">Saldo a favor</string>
    <string name="btnAvance">Avance</string>
    <string name="btnHorario">Horario</string>
    <string name="btnMateriasDisponibles">Materias Disponibles</string>
    <string name="btnMateriasRegistradas">Materias Registradas</string>
    <string name="btnProbDeAvance">Probabilidad de Avance</string>
    <string name="btnDeudasGeneral">Deuda General</string>
    <string name="title_activity_materias">Materias</string>
    <string name="title_activity_consejerias">Consejerías</string>
    <string name="title_activity_horario_clases">Horario de clase</string>
    <string name="title_activity_horario_examenes">Horario de exámenes</string>
    <string name="title_activity_informacion">Informacion</string>
    <string name="title_activity_Historial">Historial</string>
    <string name="TgrupoEtnico">Grupo Etnico:</string>
    <string name="Tsancion">Sancion:</string>
	<string name="Search">Buscar:</string>
</resources>
