<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    android:baselineAligned="true"
    android:gravity="center_horizontal|top"
    android:layoutDirection="inherit"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/tvParalelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:hint="@string/Tbool"
        android:text="@string/Tmat"
        android:textAlignment="textEnd"
        android:textColor="#E6E6E6"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvParalelo"
        android:layout_below="@+id/tvParalelo"
        android:layout_marginTop="8sp"
        android:text="@string/Tedula"
        android:textColor="#E6E6E6"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvParalelo"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="8sp"
        android:text="@string/Tnombre"
        android:textColor="#E6E6E6"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvParalelo"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="8sp"
        android:text="@string/Temail"
        android:textColor="#E6E6E6"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvParalelo"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="8sp"
        android:text="@string/tfactor"
        android:textColor="#E6E6E6"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvParalelo"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="8sp"
        android:text="@string/TgrupoEtnico"
        android:textColor="#E6E6E6"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvParalelo"
        android:layout_below="@+id/tvMateria"
        android:layout_marginTop="8sp"
        android:text="@string/Tpromedio"
        android:textColor="#E6E6E6"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvHoraFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvParalelo"
        android:layout_below="@+id/tvDia"
        android:layout_marginTop="8sp"
        android:text="@string/Tsancion"
        android:textColor="#E6E6E6"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/matricu"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:layout_toRightOf="@+id/tvMateria"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/Tbool"
        android:textColor="#E6E6E6"
        android:textSize="17sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/ced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/matricu"
        android:layout_below="@+id/matricu"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/Tbool"
        android:textColor="#E6E6E6"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/matricu"
        android:layout_below="@+id/ced"
        android:ems="15"
        android:enabled="false"
        android:hint="@string/Tbool"
        android:textColor="#E6E6E6"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/ema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/matricu"
        android:layout_below="@+id/nom"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/Tbool"
        android:textColor="#E6E6E6"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/fac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/matricu"
        android:layout_below="@+id/ema"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/Tbool"
        android:textColor="#E6E6E6"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/gru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/matricu"
        android:layout_below="@+id/fac"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/Tbool"
        android:textColor="#E6E6E6"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/pro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/matricu"
        android:layout_below="@+id/gru"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/Tbool"
        android:textColor="#E6E6E6"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/san"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/matricu"
        android:layout_below="@+id/pro"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/Tbool"
        android:textColor="#E6E6E6"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/ir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:src="@drawable/salir" />

    <Button
        android:id="@+id/btnAvance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/san"
        android:layout_below="@+id/san"
        android:background="#0071BC"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:radius="51dp"
        android:text="@string/btnAvance" />

    <Button
        android:id="@+id/btnHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnAvance"
        android:layout_alignBottom="@+id/btnAvance"
        android:layout_alignRight="@+id/tvDia"
        android:background="#0071BC"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:radius="51dp"
        android:text="@string/btnHorario" />

</RelativeLayout>