<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    android:contentDescription="@string/app_name"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:src="@drawable/login" />

    <ImageButton
        android:id="@+id/ir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/pass"
        android:layout_marginBottom="90dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:src="@drawable/blueok" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/ir"
        android:layout_marginBottom="58dp"
        android:textColor="#E6E6E6"
        android:text="@string/Tbool"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/pass"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:layout_centerHorizontal="true"
        android:ems="10"
        
        android:textColor="#E6E6E6"
        android:hint="@string/Hpass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/user"
        android:hint="@string/Huser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pass"
        android:layout_centerVertical="true"
        android:ems="10"
        android:textColor="#E6E6E6" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/matricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ir"
        android:layout_alignLeft="@+id/pass"
        android:text="@string/Tbool" />

    <TextView
        android:id="@+id/tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/matricula"
        android:text="@string/Tbool" />

    <ImageButton
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:src="@drawable/salir" />

</RelativeLayout>